[SYNCOPE-620] jboss-it